# one-framework

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
.github/: copilot-instructions-zh.md  copilot-instructions.md
.github/workflows/: auto-assign.yml  build.yml  docs.yml
app/: CMakeLists.txt  prj.conf  sample.yaml
app/src/: main.c  main.cpp
cmake/: OF.cmake
cmake/Modules/: FindAnkerl.cmake  FindEMS.cmake  FindFrozen.cmake  FindMpUnits.cmake  FindTlExpected.cmake
cmake/modules/: OF.cmake  OFFindExpected.cmake  OFUnit.cmake  OFUnitRegistry.cmake
doc/: Doxyfile  XenoControl_README.md  conf.py  header.html  index.rst  mainpage.md  requirements.txt
doc/_doxygen/: main.md
drivers/: CMakeLists.txt  Kconfig
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.dbus  input-dbus.c
drivers/output/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/status-leds/: CMakeLists.txt  Kconfig  status_leds.c
drivers/utils/: CMakeLists.txt  Kconfig
dts/bindings/: one-framework,imu-hub.yaml  one-framework,notify-hub.yaml  one-framework,sbus-hub.yaml  one-framework,vt-hub.yaml  vendor-prefixes.txt
dts/common/: dbus-preset.dtsi
dts/displays/: display-connections.dtsi
lib/: CMakeLists.txt  Kconfig
lib/CommBridge/: CMakeLists.txt  CommBridge.cpp  Kconfig  LogModule.cpp  Manager.cpp  Receiver.cpp  Sender.cpp
lib/ControllerCenter/: CMakeLists.txt  ControllerCenter.cpp  Kconfig
lib/ControllerHub/: CMakeLists.txt  ControllerHub.cpp  Kconfig
lib/DeltaT/: Kconfig
lib/HubManager/: CMakeLists.txt  HubManager.cpp  Kconfig
lib/IMUCenter/: CMakeLists.txt  IMUCenter.cpp  Kconfig
lib/ImuHub/: CMakeLists.txt  ImuHub.cpp  Kconfig
lib/Network/: CANInterface.cpp  CMakeLists.txt  Daemon.cpp  Interface.cpp  Kconfig  Netlink.cpp  VCANInterface.cpp
lib/Node/: CMakeLists.txt  Kconfig  Node.cpp
lib/NotifyHub/: CMakeLists.txt  Kconfig  NotifyHub.cpp
lib/PID/: Kconfig  PID.cpp
lib/SbusHub/: CMakeLists.txt  Kconfig  SbusHub.cpp
lib/Unit/: Kconfig  Unit.cpp  UnitRegistry.cpp
lib/VtHub/: CMakeLists.txt  Kconfig  (+1 more)
scripts/: runner.py  west-commands.yml  west_command.py
tests/lib/applications/Unit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/applications/Unit/src/: main.cpp
tests/lib/applications/Unit/src/Units/: Kconfig  TestUnit1.cpp  TestUnit1.hpp  TestUnit2.cpp  TestUnit2.hpp  ThreadTestUnit.cpp  ThreadTestUnit.hpp
zephyr/: module.yml
(+273 files in other folders)
